UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DID_Number_Details__c/ftr_DID_Number_Details__c.object-meta.xml
<CustomObject>
    <label>DID Number Details</label>
    <nameField>
        <label>DID Number Details</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DID Number Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>