UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DID_Number_Details__c/fields/Did_Info_Value_DPI__c.field-meta.xml
<CustomField>
    <fullName>Did_Info_Value_DPI__c</fullName>
    <formula>CASE( DIDNumberInfo__c ,
&apos;New DID Range&apos;, &apos;DIDS: New&apos;,
&apos;Existing DIDs&apos;, &apos;DIDS: Existing&apos;,
&apos;Combo New &amp; Port-In&apos;, &apos;Combo New &amp; Port-In&apos;,
&apos;Existing # (Regrade)&apos;, &apos;DIDS: Existing&apos;,
&apos;Port-In&apos;, &apos;DIDS: PortIn&apos;,
&apos;Winback&apos;, &apos;DIDs: Winback&apos;,
&apos;Combo&apos;, &apos;Combo&apos;,
&apos;OOF&apos;, &apos;DIDS: OOF&apos;,
&apos;Combo New &amp; Port-In&apos;, &apos;Combo New &amp; Port-In&apos;,&apos;&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Did Info Value DPI</label>
    <type>Text</type>
</CustomField>