UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DID_Number_Details__c/fields/DID_Number__c.field-meta.xml
<CustomField>
    <fullName>DID_Number__c</fullName>
    <label>DID Number (Unique)</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>