UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DID_Number_Details__c/fields/DID_Status__c.field-meta.xml
<CustomField>
    <fullName>DID_Status__c</fullName>
    <label>DID Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>