UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DID_Number_Details__c/fields/DIDNumber__c.field-meta.xml
<CustomField>
    <fullName>DIDNumber__c</fullName>
    <label>DID Number</label>
    <type>Phone</type>
</CustomField>