UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DID_Number_Details__c/fields/DIDNumberInfo__c.field-meta.xml
<CustomField>
    <fullName>DIDNumberInfo__c</fullName>
    <label>DID Number Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>