UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DID_Number_Details__c/fields/Group_Member__c.field-meta.xml
<CustomField>
    <fullName>Group_Member__c</fullName>
    <formula>Ucf_User_Name__c &amp; &quot; - (&quot; &amp; LEFT(DIDNumber__c, 3) &amp; &quot;) &quot; &amp; MID(DIDNumber__c, 4, 3) &amp; &quot;-&quot; &amp; RIGHT(DIDNumber__c, 4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group Member</label>
    <type>Text</type>
</CustomField>