UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DID_Number_Details__c/fields/isDIDLead__c.field-meta.xml
<CustomField>
    <fullName>isDIDLead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isDIDLead</label>
    <type>Checkbox</type>
</CustomField>