UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DID_Number_Details__c/fields/MDN_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>MDN_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is MDN</label>
    <type>Checkbox</type>
</CustomField>