UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DID_Number_Details__c/fields/MLHG_Name__c.field-meta.xml
<CustomField>
    <fullName>MLHG_Name__c</fullName>
    <label>MLHG Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>