UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DID_Number_Details__c/fields/NPA__c.field-meta.xml
<CustomField>
    <fullName>NPA__c</fullName>
    <formula>MID(SUBSTITUTE(DID_Number__c,&apos;-&apos;,&apos;&apos;),0,3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NPA</label>
    <type>Text</type>
</CustomField>