UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DID_Number_Details__c/fields/NXX__c.field-meta.xml
<CustomField>
    <fullName>NXX__c</fullName>
    <formula>MID(SUBSTITUTE(DID_Number__c,&apos;-&apos;,&apos;&apos;),4,3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NXX</label>
    <type>Text</type>
</CustomField>