UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DID_Number_Details__c/fields/Outbound_Caller_ID__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Caller_ID__c</fullName>
    <label>Outbound Caller ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>