UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DID_Number_Details__c/fields/Page_Groups__c.field-meta.xml
<CustomField>
    <fullName>Page_Groups__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Page Groups</label>
    <referenceTo>Page_Group__c</referenceTo>
    <relationshipLabel>DID Number Details</relationshipLabel>
    <relationshipName>DID_Number_Details</relationshipName>
    <type>Lookup</type>
</CustomField>