UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DID_Number_Details__c/fields/RateCenter__c.field-meta.xml
<CustomField>
    <fullName>RateCenter__c</fullName>
    <label>Rate Center</label>
    <length>255</length>
    <type>Text</type>
</CustomField>