UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DID_Number_Details__c/fields/Ring_Pattern__c.field-meta.xml
<CustomField>
    <fullName>Ring_Pattern__c</fullName>
    <label>Ring Pattern</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ring all</fullName>
                <default>true</default>
                <label>Ring all</label>
            </value>
            <value>
                <fullName>Ring One at a Time</fullName>
            </value>
            <value>
                <fullName>Round Robin</fullName>
            </value>
            <value>
                <fullName>Longest Idle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>