UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DID_Number_Details__c/fields/ThirdParty__c.field-meta.xml
<CustomField>
    <fullName>ThirdParty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ThirdParty</label>
    <type>Checkbox</type>
</CustomField>