UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DID_Number_Details__c/fields/Ucf_Address_Number__c.field-meta.xml
<CustomField>
    <fullName>Ucf_Address_Number__c</fullName>
    <label>Address Number</label>
    <length>52</length>
    <type>Text</type>
</CustomField>