UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DID_Number_Details__c/fields/ucf_Auto_Attendent_Name__c.field-meta.xml
<CustomField>
    <fullName>ucf_Auto_Attendent_Name__c</fullName>
    <label>Auto Attendent Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>