UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DID_Number_Details__c/fields/Ucf_Collaboration__c.field-meta.xml
<CustomField>
    <fullName>Ucf_Collaboration__c</fullName>
    <label>Collaboration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10 Attendees</fullName>
            </value>
            <value>
                <fullName>25 Attendees</fullName>
            </value>
            <value>
                <fullName>100 Attendees</fullName>
            </value>
            <value>
                <fullName>200 Attendees</fullName>
            </value>
            <value>
                <fullName>300 Attendees</fullName>
            </value>
            <value>
                <fullName>500 Attendees</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>