UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DID_Number_Details__c/fields/Ucf_Current_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Ucf_Current_Carrier__c</fullName>
    <label>Current Carrier</label>
    <length>52</length>
    <type>Text</type>
</CustomField>