UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DID_Number_Details__c/fields/Ucf_Customize_Extension__c.field-meta.xml
<CustomField>
    <fullName>Ucf_Customize_Extension__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customize Extension</label>
    <type>Checkbox</type>
</CustomField>