UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DID_Number_Details__c/fields/Ucf_Device_Accessories__c.field-meta.xml
<CustomField>
    <fullName>Ucf_Device_Accessories__c</fullName>
    <label>Device Accessories</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yealink UH36 Mono Headset</fullName>
            </value>
            <value>
                <fullName>Yealink WH62 Dual Cordless Headset</fullName>
            </value>
            <value>
                <fullName>Yealink UH36 Dual Headset</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>