UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DID_Number_Details__c/fields/Ucf_Device_Type__c.field-meta.xml
<CustomField>
    <fullName>Ucf_Device_Type__c</fullName>
    <label>Device Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yealink T31G</fullName>
            </value>
            <value>
                <fullName>Yealink CP960 Conference</fullName>
            </value>
            <value>
                <fullName>Yealink T54W</fullName>
            </value>
            <value>
                <fullName>Yealink T57W</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>