UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DID_Number_Details__c/fields/Ucf_Dial_Plan_Information__c.field-meta.xml
<CustomField>
    <fullName>Ucf_Dial_Plan_Information__c</fullName>
    <label>Dial Plan Information</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>National and Canada</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>