UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DID_Number_Details__c/fields/Ucf_EAS_Pin__c.field-meta.xml
<CustomField>
    <fullName>Ucf_EAS_Pin__c</fullName>
    <label>EAS Pin</label>
    <length>52</length>
    <type>Text</type>
</CustomField>