UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DID_Number_Details__c/fields/Ucf_Email__c.field-meta.xml
<CustomField>
    <fullName>Ucf_Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>