UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DID_Number_Details__c/fields/Ucf_Extension_Lenght__c.field-meta.xml
<CustomField>
    <fullName>Ucf_Extension_Lenght__c</fullName>
    <label>Extension Lenght</label>
    <length>100</length>
    <type>Text</type>
</CustomField>