UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DID_Number_Details__c/fields/Ucf_General_Voice_Mail_Name__c.field-meta.xml
<CustomField>
    <fullName>Ucf_General_Voice_Mail_Name__c</fullName>
    <label>General Voice Mail Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>