UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DID_Number_Details__c/fields/Ucf_Identifying_Location__c.field-meta.xml
<CustomField>
    <fullName>Ucf_Identifying_Location__c</fullName>
    <label>Identifying Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales Office</fullName>
            </value>
            <value>
                <fullName>Administration Office</fullName>
            </value>
            <value>
                <fullName>Customer Service Office</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>