UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DID_Number_Details__c/fields/Ucf_Install_Type__c.field-meta.xml
<CustomField>
    <fullName>Ucf_Install_Type__c</fullName>
    <label>Install Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New DID Range</fullName>
            </value>
            <value>
                <fullName>Port-In</fullName>
            </value>
            <value>
                <fullName>Winback</fullName>
            </value>
            <value>
                <fullName>Existing # (Regrade)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>