UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DID_Number_Details__c/fields/Ucf_MAC_Address__c.field-meta.xml
<CustomField>
    <fullName>Ucf_MAC_Address__c</fullName>
    <label>MAC Address</label>
    <length>52</length>
    <type>Text</type>
</CustomField>