UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DID_Number_Details__c/fields/Ucf_Number_Use__c.field-meta.xml
<CustomField>
    <fullName>Ucf_Number_Use__c</fullName>
    <label>Number Use</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DID</fullName>
                <default>true</default>
                <label>DID</label>
            </value>
            <value>
                <fullName>Auto Attendant</fullName>
            </value>
            <value>
                <fullName>General Voice Mail</fullName>
            </value>
            <value>
                <fullName>Multi-Line Hunting Group</fullName>
                <label>Multi-Line Hunt Group Pilot</label>
            </value>
            <value>
                <fullName>Vacant/Spare/Additional DID</fullName>
            </value>
            <value>
                <fullName>Toll Free</fullName>
            </value>
            <value>
                <fullName>Contact Center as a Service</fullName>
            </value>
            <value>
                <fullName>Not Porting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>