UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DID_Number_Details__c/fields/Ucf_Other_Outbound_Caller_ID__c.field-meta.xml
<CustomField>
    <fullName>Ucf_Other_Outbound_Caller_ID__c</fullName>
    <label>Ucf Other Outbound Caller ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>