UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DID_Number_Details__c/fields/Ucf_State__c.field-meta.xml
<CustomField>
    <fullName>Ucf_State__c</fullName>
    <label>State</label>
    <length>55</length>
    <type>Text</type>
</CustomField>