UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DID_Number_Details__c/fields/Ucf_Storage__c.field-meta.xml
<CustomField>
    <fullName>Ucf_Storage__c</fullName>
    <label>Storage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>30 days(free)</fullName>
            </value>
            <value>
                <fullName>180 days</fullName>
            </value>
            <value>
                <fullName>1 Year</fullName>
            </value>
            <value>
                <fullName>2 Years</fullName>
            </value>
            <value>
                <fullName>3 Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>