UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DID_Number_Details__c/fields/Ucf_User_Admin__c.field-meta.xml
<CustomField>
    <fullName>Ucf_User_Admin__c</fullName>
    <label>User Admin</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>BGRP</fullName>
            </value>
            <value>
                <fullName>Dept</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>