UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DID_Number_Details__c/fields/Ucf_Voip_Qualification__c.field-meta.xml
<CustomField>
    <fullName>Ucf_Voip_Qualification__c</fullName>
    <label>Voip Qualification</label>
    <length>52</length>
    <type>Text</type>
</CustomField>