UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DID_Number_Details__c/fields/Ucf_Webinar__c.field-meta.xml
<CustomField>
    <fullName>Ucf_Webinar__c</fullName>
    <label>Webinar</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>100 Attendees</fullName>
            </value>
            <value>
                <fullName>500 Attendees</fullName>
            </value>
            <value>
                <fullName>1000 Attendees</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>