UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DID_Number_Details__c/fields/Ucf_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Ucf_Zip_Code__c</fullName>
    <label>Zip Code</label>
    <length>52</length>
    <type>Text</type>
</CustomField>